--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,7 +14,7 @@ jobs:
                   node-version: 18
                   registry-url: https://registry.npmjs.org
             - name: publish
-              run: npm publish --access public
+              run: npm publish
               working-directory: nextrouterkit
               env:
                   NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
