--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,20 +1,18 @@
-name: "publish npm"
-
-on: push
+ name: NPM Publisher
+ on:
+  push:
+    branches: main
 
 jobs:
-    publish:
-        runs-on: ubuntu-latest
-        steps:
-            - name: checkout
-              uses: actions/checkout@v2
-            - name: node
-              uses: actions/setup-node@v2
-              with:
-                  node-version: 18
-                  registry-url: https://registry.npmjs.org
-            - name: publish
-              run: npm publish
-              working-directory: nextrouterkit
-              env:
-                  NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+      - run: npm ci
+      - run: npm test
+      - uses: JS-DevTools/npm-publish@v3
+        with:
+          token: ${{ secrets.NPM_AUTH_TOKEN }}
