--- a/tsconfig.json
+++ b/tsconfig.json
@@ -104,7 +104,9 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
+    "skipLibCheck": true,
+    "types": ["node"]
+    /* Skip type checking all .d.ts files. */
   },
   "include": ["*/**/*.ts"],
   "exclude": ["node_modules"]
