--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "nextrouterkit",
   "version": "0.0.0-beta2",
   "description": "A Next Level Router For Your Web Apps",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "init": "ts-node index.ts init",
-    "lint": "eslint ."
-
+    "init": "ts-node index.js init",
+    "lint": "eslint .",
+    "build": "tsc"
+  },
+  "bin": {
+    "nextrouterkit": "bin/nextrouterkit.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +30,7 @@
   },
   "homepage": "https://github.com/muhammad-fiaz/NextRouterKit#readme",
   "devDependencies": {
+    "@types/express": "^4.17.20",
     "@types/node": "^20.8.10",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
@@ -37,5 +41,9 @@
     "path": "^0.12.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "readline-sync": "^1.4.10"
   }
 }
