--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "chokidar": "^3.5.3",
     "express": "^4.18.2",
     "readline-sync": "^1.4.10"
   }
