--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "eslint .",
     "build": "tsc",
     "start": "node index.js",
-    "dev": "node index.js",
-    "postinstall": "node ./node_modules/nextrouterkit/index.js"
+    "dev": "node index.js"
   },
+  "type": "module",
+
   "bin": {
     "nextrouterkit": "bin/Cli.js"
   },
@@ -39,14 +40,15 @@
     "@typescript-eslint/parser": "^6.9.1",
     "eslint": "^8.53.0",
     "fs": "^0.0.1-security",
-    "glob": "^10.3.10",
     "jest": "^29.7.0",
     "path": "^0.12.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "chokidar": "^3.5.3",
     "express": "^4.18.2",
+    "glob": "^10.3.10",
     "readline-sync": "^1.4.10"
   }
 }
